--- a/src/components/DogCard/DogCard.css
+++ b/src/components/DogCard/DogCard.css
@@ -3,10 +3,12 @@
   width: 300px;
   display: flex;
   flex-direction: column;
+  margin: 15px;
 }
 
 .dog-card img {
   max-height: 300px;
   max-width: 300px;
   border-radius: 50%;
+  margin: 8px;
 }
