--- a/src/components/DogCard/DogCard.css
+++ b/src/components/DogCard/DogCard.css
@@ -1,9 +1,14 @@
 .dog-card {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   margin: 15px;
+  overflow: scroll;
+  background-color: lightpink;
+  border-radius: 3ch;
+  box-shadow: rgba(228, 33, 202, 0.19) 0px 10px 20px, rgba(228, 33, 202, 0.19) 0px 6px 6px;
+  align-items: center;
 }
 
 .dog-card img {
